Fix #42 - diff highlight covering
thanks to @heftig for reporting

--- a/material-github.user.css
+++ b/material-github.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         Material Dark GitHub
-@version      3.3.0
+@version      3.3.1
 @description  A Material Dark theme for GitHub
 @namespace    CharlieEtienne
 @author       CharlieEtienne
@@ -1064,5 +1064,17 @@
 	}
 	.Label--gray-darker {
 	    color: #6a737d;
+	}
+	.pl-md {
+		color: hsla(353, 72%, 60%, 1);
+		background-color: hsla(353, 25%, 21%, 1);
+	}
+	.pl-mi1 {
+		color: hsla(137, 72%, 60%, 1);
+		background-color: hsla(137, 25%, 21%, 1);
+	}
+	.pl-mc {
+		color: hsla(24, 72%, 60%, 1);
+		background-color: hsla(24, 25%, 21%, 1);
 	}
 }
